--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,25 @@
     tools:context="hr.foi.air.sportloc.MainActivity">
 
     <ImageView
+        android:id="@+id/ivFacebook"
+        android:layout_width="21dp"
+        android:layout_height="52dp"
+        android:adjustViewBounds="false"
+        app:srcCompat="@drawable/fb_icon"
+        android:elevation="4dp"
+        app:layout_constraintTop_toTopOf="@+id/btnFacebook"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/btnFacebook"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_marginLeft="51dp"
+        app:layout_constraintLeft_toLeftOf="@+id/btnFacebook" />
+
+    <ImageView
         android:id="@+id/ivLogo"
         android:layout_width="335dp"
         android:layout_height="95dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="-171dp"
         android:contentDescription="@string/app_logo"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/app_logo"
@@ -20,7 +35,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.529" />
+        app:layout_constraintHorizontal_bias="0.117" />
 
     <TextView
         android:id="@+id/tvLogin"
@@ -47,6 +62,7 @@
         android:layout_marginRight="24dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/btn_account"
+
         android:gravity="center_horizontal"
         android:text="@string/btn_account"
         android:textColor="#FFFFFF"
@@ -92,4 +108,19 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="41dp"
+        android:layout_height="43dp"
+        app:srcCompat="@drawable/google_icon"
+        android:elevation="2dp"
+        app:layout_constraintBottom_toBottomOf="@+id/btnGoogle"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="@+id/btnGoogle"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_marginLeft="41dp"
+        app:layout_constraintLeft_toLeftOf="@+id/btnGoogle" />
+
 </android.support.constraint.ConstraintLayout>
