--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,25 +7,10 @@
     tools:context="hr.foi.air.sportloc.MainActivity">
 
     <ImageView
-        android:id="@+id/ivFacebook"
-        android:layout_width="21dp"
-        android:layout_height="52dp"
-        android:adjustViewBounds="false"
-        app:srcCompat="@drawable/fb_icon"
-        android:elevation="4dp"
-        app:layout_constraintTop_toTopOf="@+id/btnFacebook"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/btnFacebook"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintVertical_bias="1.0"
-        android:layout_marginLeft="51dp"
-        app:layout_constraintLeft_toLeftOf="@+id/btnFacebook" />
-
-    <ImageView
         android:id="@+id/ivLogo"
         android:layout_width="335dp"
         android:layout_height="95dp"
-        android:layout_marginTop="-171dp"
+        android:layout_marginTop="32dp"
         android:contentDescription="@string/app_logo"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/app_logo"
@@ -35,7 +20,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.117" />
+        app:layout_constraintHorizontal_bias="0.529" />
 
     <TextView
         android:id="@+id/tvLogin"
@@ -62,7 +47,6 @@
         android:layout_marginRight="24dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/btn_account"
-
         android:gravity="center_horizontal"
         android:text="@string/btn_account"
         android:textColor="#FFFFFF"
@@ -81,15 +65,18 @@
         android:layout_marginRight="24dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/btn_facebook"
+        android:drawableStart="@drawable/fb_icon"
         android:gravity="center_horizontal"
+        android:paddingEnd="40dip"
+        android:paddingStart="40dip"
         android:text="@string/btn_facebook"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnAccount"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/btnAccount" />
 
     <Button
         android:id="@+id/btnGoogle"
@@ -99,7 +86,10 @@
         android:layout_marginRight="24dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/btn_google"
+        android:drawableStart="@drawable/google_icon"
         android:gravity="center_horizontal"
+        android:paddingEnd="70dip"
+        android:paddingStart="30dip"
         android:text="@string/btn_google"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
@@ -108,19 +98,4 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="41dp"
-        android:layout_height="43dp"
-        app:srcCompat="@drawable/google_icon"
-        android:elevation="2dp"
-        app:layout_constraintBottom_toBottomOf="@+id/btnGoogle"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toTopOf="@+id/btnGoogle"
-        android:layout_marginTop="8dp"
-        app:layout_constraintVertical_bias="1.0"
-        android:layout_marginLeft="41dp"
-        app:layout_constraintLeft_toLeftOf="@+id/btnGoogle" />
-
 </android.support.constraint.ConstraintLayout>
