Izmjena dizajna Main i Login aktivnosti
U Login aktivnosti je izmijenjena boja fonta za elemente TextView u crnu boju, dok je u Main aktivnosti prilagođena gornja margina gumba za prijavu putem Google računa.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -78,8 +78,10 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="32dp"
+        android:fontFamily="sans-serif"
         android:gravity="center_horizontal"
         android:text="@string/tv_forg_pass"
+        android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -92,8 +94,10 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="sans-serif"
         android:gravity="center_horizontal"
         android:text="@string/tv_register"
+        android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
