--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginTop="32dp"
         android:contentDescription="@string/app_logo"
-        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -49,6 +49,7 @@
                 android:layout_marginRight="24dp"
                 android:layout_marginTop="48dp"
                 android:ems="10"
+                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:hint="@string/txt_username"
                 android:inputType="textPersonName"
@@ -65,6 +66,7 @@
                 android:layout_marginRight="24dp"
                 android:layout_marginTop="16dp"
                 android:ems="10"
+                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:hint="@string/txt_password"
                 android:inputType="textPassword"
@@ -82,11 +84,11 @@
                 android:layout_marginRight="24dp"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/btn_general"
+                android:fontFamily="sans-serif"
                 android:text="@string/btn_login"
                 android:textColor="#FFFFFF"
                 android:textSize="30sp"
                 android:textStyle="bold"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
@@ -121,7 +123,8 @@
                 android:textSize="24sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvForgPass" />
+                app:layout_constraintTop_toBottomOf="@+id/tvForgPass"
+                app:layout_constraintHorizontal_bias="0.502" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
