--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.588" />
+        app:layout_constraintHorizontal_bias="0.5" />
 
     <ScrollView
         android:layout_width="0dp"
@@ -66,6 +66,7 @@
                 android:layout_marginRight="24dp"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/btn_account"
+                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:text="@string/btn_account"
                 android:textColor="#FFFFFF"
@@ -85,6 +86,7 @@
                 android:layout_marginTop="32dp"
                 android:background="@drawable/btn_facebook"
                 android:drawableStart="@drawable/fb_icon"
+                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:paddingEnd="50dip"
                 android:paddingStart="40dip"
@@ -106,6 +108,7 @@
                 android:layout_marginTop="32dp"
                 android:background="@drawable/btn_google"
                 android:drawableStart="@drawable/google_icon"
+                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:paddingEnd="70dip"
                 android:paddingStart="30dip"
@@ -113,7 +116,6 @@
                 android:textColor="#FFFFFF"
                 android:textSize="30sp"
                 android:textStyle="bold"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />
