--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -20,7 +20,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/app_logo"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginEnd="16dp"
+        app:layout_constraintHorizontal_bias="0.5" />
 
     <ScrollView
         android:layout_width="0dp"
@@ -47,63 +48,69 @@
                 android:id="@+id/txtName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
+                android:layout_marginStart="16dp"
                 android:ems="10"
+                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:hint="@string/txt_name"
                 android:inputType="textPersonName"
                 android:textSize="24sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/txtSurname"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:ems="10"
+                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:hint="@string/txt_surname"
                 android:inputType="textPersonName"
                 android:textSize="24sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtName"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp" />
+                app:layout_constraintTop_toBottomOf="@+id/txtName" />
 
             <EditText
                 android:id="@+id/txtUsername"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:ems="10"
+                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:hint="@string/txt_username"
                 android:inputType="textPersonName"
                 android:textSize="24sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtSurname"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp" />
+                app:layout_constraintTop_toBottomOf="@+id/txtSurname" />
 
             <EditText
                 android:id="@+id/txtEmail"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:ems="10"
+                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:hint="@string/txt_email"
                 android:inputType="textEmailAddress"
@@ -111,27 +118,26 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtUsername"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp" />
+                app:layout_constraintTop_toBottomOf="@+id/txtUsername" />
 
             <EditText
                 android:id="@+id/txtPassword"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:ems="10"
+                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:hint="@string/txt_password"
                 android:inputType="textPassword"
                 android:textSize="24sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtEmail"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp" />
+                app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
 
             <TextView
                 android:id="@+id/tvGender"
@@ -159,6 +165,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/btn_general_selected"
+                android:fontFamily="sans-serif"
                 android:text="@string/btn_male"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -176,13 +183,14 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/btn_general"
+                android:fontFamily="sans-serif"
                 android:text="@string/btn_female"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp"
-                app:layout_constraintTop_toBottomOf="@+id/tvGender"
+                app:layout_constraintLeft_toRightOf="@+id/btnMale"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toRightOf="@+id/btnMale" />
+                app:layout_constraintTop_toBottomOf="@+id/tvGender" />
 
             <EditText
                 android:id="@+id/txtBirthday"
@@ -192,15 +200,14 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
                 android:ems="10"
+                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:hint="@string/txt_birthday"
                 android:inputType="date"
                 android:textSize="24sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnMale"
-                tools:layout_editor_absoluteX="48dp"
-                tools:layout_editor_absoluteY="122dp" />
+                app:layout_constraintTop_toBottomOf="@+id/btnMale" />
 
             <Button
                 android:id="@+id/btnRegistration"
@@ -211,12 +218,13 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/btn_general"
+                android:fontFamily="sans-serif"
                 android:text="@string/btn_registration"
                 android:textColor="#FFFFFF"
                 android:textSize="30sp"
                 android:textStyle="bold"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtBirthday" />
