--- a/app/src/main/res/layout/activity_forg_pass.xml
+++ b/app/src/main/res/layout/activity_forg_pass.xml
@@ -47,14 +47,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginTop="32dp"
                 android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:text="@string/tv_forg_pass_info"
                 android:textColor="#000000"
                 android:textSize="24sp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/txtEmail"
