--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,6 @@
                 android:id="@+id/tvLogin"
                 android:layout_width="135dp"
                 android:layout_height="33dp"
-                android:layout_marginTop="40dp"
                 android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:text="@string/tv_login"
@@ -56,7 +55,8 @@
                 android:layout_marginLeft="16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginRight="16dp"
-                app:layout_constraintRight_toRightOf="parent" />
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/btnAccount"
