--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -26,7 +26,7 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="96dp"
         android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -44,15 +44,14 @@
             android:scrollbars="vertical">
 
             <Button
-                android:id="@+id/btnPronadi"
+                android:id="@+id/btnFind"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
-                android:layout_marginTop="48dp"
                 android:background="@drawable/btn_general_bordered"
                 android:fontFamily="sans-serif"
-                android:text="@string/btn_pronadi"
+                android:text="@string/btn_find"
                 android:textColor="#FFFFFF"
                 android:textSize="30sp"
                 android:textStyle="bold"
@@ -62,7 +61,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/btnDodaj"
+                android:id="@+id/btnAdd"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
@@ -70,14 +69,14 @@
                 android:layout_marginTop="48dp"
                 android:background="@drawable/btn_general_bordered"
                 android:fontFamily="sans-serif"
-                android:text="@string/btn_dodaj"
+                android:text="@string/btn_add"
                 android:textColor="#FFFFFF"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnPronadi" />
+                app:layout_constraintTop_toBottomOf="@+id/btnFind" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
