Maknuti testni podaci i testirana aktivnost Uklonjeni su hardcodirani testni podaci i dizajn je testiran te spreman za korištenje. Stringovi su posloženi po abecedi, margine su kao i drugdje u apikaciji stavljene na 16dp. Maknuti komentari za element koji sadrži mapu.

--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -32,11 +32,10 @@
 
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
                 android:gravity="start"
-                android:text="Nogomet iza Žige 6"
                 android:textColor="#000000"
                 android:textSize="36sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -48,10 +47,9 @@
                 android:id="@+id/tvSportLocation"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="42dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginEnd="52dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="2dp"
-                android:text="Plivanje po Savi, Slavonski Brod"
                 android:textColor="#000000"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -62,8 +60,8 @@
                 android:id="@+id/dvdHorizontal"
                 android:layout_width="0dp"
                 android:layout_height="2dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:background="#888888"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -74,10 +72,9 @@
                 android:id="@+id/tvSpace"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:text="Ima slobodnih mjesta (2/10)"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -89,9 +86,9 @@
                 android:id="@+id/tvMadeByString"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:text="@string/event_details_madeby"
+                android:text="@string/event_details_made_by"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -102,10 +99,9 @@
                 android:id="@+id/tvUser"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="8dp"
-                android:text="edgyjura"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -116,7 +112,7 @@
                 android:id="@+id/tvAddressString"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:text="@string/event_details_address"
                 android:textColor="#000000"
                 android:textSize="18sp"
@@ -128,9 +124,8 @@
                 android:id="@+id/tvAddress"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginStart="4dp"
-                android:text="Omladinska 6, Kučan Marof, Varaždin"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -141,7 +136,7 @@
                 android:id="@+id/tvDateString"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:text="@string/event_details_date"
                 android:textColor="#000000"
                 android:textSize="18sp"
@@ -153,9 +148,8 @@
                 android:id="@+id/tvDate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginStart="4dp"
-                android:text="1. 4. 2018."
                 android:textColor="#000000"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -166,7 +160,7 @@
                 android:id="@+id/tvTimeString"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:text="@string/event_details_time"
                 android:textColor="#000000"
                 android:textSize="18sp"
@@ -178,9 +172,8 @@
                 android:id="@+id/tvTime"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginStart="4dp"
-                android:text="19:00 - 20:30"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -191,8 +184,8 @@
                 android:id="@+id/tvDescriptionString"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
                 android:text="@string/event_details_description"
                 android:textColor="#000000"
@@ -206,9 +199,8 @@
                 android:id="@+id/tvDescription"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:text="nek neko dojde posle škole do žige. tam bumo Picek i ja, zeli bumo loptu"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -219,8 +211,8 @@
                 android:id="@+id/btnJoinLeaveRequest"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/btn_general"
                 android:fontFamily="sans-serif"
@@ -253,26 +245,15 @@
                 android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginStart="4dp"
-                android:contentDescription="Thicc Tick"
+                android:contentDescription="@string/ikona_kvacica"
                 android:scaleType="fitStart"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toTopOf="@+id/dvdHorizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tvSportLocation"
                 app:srcCompat="@drawable/ic_tick" />
-
-                /*
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="4dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvMapString"
-                */
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
